<resources>
    <string name="app_name">랜덤리즘</string>
    <string name="dialog_title_change_problem">%1$s 관련 랜덤 문제로 이동하시겠습니까?</string>
    <string name="dialog_btn_okay">확인</string>
    <string name="dialog_btn_cancel">취소</string>

    <string name="appbar_title_setting">설정</string>

    <string name="setting_btn_mail">의견 보내기</string>
    <string name="setting_tv_current_version">v1.7</string>

    <string name="title_level_selection">레벨 선택</string>

    <string name="source_btn_camp">Camp</string>
    <string name="source_btn_high_school">High School</string>
    <string name="source_btn_icpc">ICPC</string>
    <string name="source_btn_olympiad">Olympiad</string>
    <string name="source_btn_university">University</string>
    <string name="source_desc">로 분류된 문제들이 랜덤으로 보여집니다.</string>

    <string name="tv_bronze">브론즈</string>
    <string name="tv_silver">실버</string>
    <string name="tv_gold">골드</string>
    <string name="tv_platinum">플래티넘</string>
    <string name="tv_diamond">다이아몬드</string>
    <string name="tv_ruby">루비</string>
    <string name="tv_all">전체 레벨</string>

    <string name="title_activity_on_boarding_screen">onBoardingScreen</string>
    <string name="tv_login_desc">solved.ac에서 사용하는 아이디를 입력해주세요.</string>
    <string name="tv_login_desc2">백준 온라인 저지 사이트의 계정이 solved.ac와 연동되어 있어야 이용가능합니다.</string>
    <string name="tv_login_appbar">로그인</string>
    <string name="et_login_hint">solved.ac 아이디</string>
    <string name="btn_login_check_id">계정확인</string>
    <string name="tv_login_saved_id">아이디 기억하기</string>
    <string name="tv_onboarding_title">알고리즘 랜덤 디펜스\n를 위한 랜덤리즘</string>
    <string name="tv_onboarding_login">solved.ac 아이디를 통해 로그인하기</string>
    <string name="tv_onboarding_just_looking">랜덤리즘 둘러보기</string>

    <string name="tv_home_algorithm_all">전체보기</string>
    <string name="tv_home_solved_problem_label">해결한 문제</string>
    <string name="tv_home_user_label">님</string>
    <string name="tv_home_recommend_title">추천</string>
    <string name="btn_home_recommend_first">새싹난이도 문제</string>
    <string name="btn_home_recommend_second">10,000명이상 푼 문제</string>
    <string name="btn_home_recommend_third">에센셜2~5 문제</string>
    <string name="tv_home_popular_algorithm_title">많이 찾는 알고리즘</string>
    <string name="tv_home_level_title">레벨별 알고리즘</string>
    <string name="tv_home_source_title">출처별 알고리즘</string>

    <string name="nav_home">홈</string>
    <string name="nav_tag">알고리즘</string>
    <string name="nav_level">레벨</string>
    <string name="nav_setting">설정</string>
    <string name="nav_source">출처</string>
    <string name="nav_onboarding">온보딩</string>
    <string name="nav_login">로그인</string>
    <string name="menu_timer">타이머</string>
    <string name="tv_logout_title">로그아웃 하시겠습니까?</string>
    <string name="tv_logout">로그아웃</string>

    <string-array name="levelForTabItem">
        <item>Unrank</item>
        <item>브론즈</item>
        <item>실버</item>
        <item>골드</item>
        <item>플래티넘</item>
        <item>다이아몬드</item>
        <item>루비</item>
    </string-array>

    <string-array name="levelList">
        <item>Unrank</item>
        <item>브론즈 5</item>
        <item>브론즈 4</item>
        <item>브론즈 3</item>
        <item>브론즈 2</item>
        <item>브론즈 1</item>
        <item>실버 5</item>
        <item>실버 4</item>
        <item>실버 3</item>
        <item>실버 2</item>
        <item>실버 1</item>
        <item>골드 5</item>
        <item>골드 4</item>
        <item>골드 3</item>
        <item>골드 2</item>
        <item>골드 1</item>
        <item>플래티넘 5</item>
        <item>플래티넘 4</item>
        <item>플래티넘 3</item>
        <item>플래티넘 2</item>
        <item>플래티넘 1</item>
        <item>다이아몬드 5</item>
        <item>다이아몬드 4</item>
        <item>다이아몬드 3</item>
        <item>다이아몬드 2</item>
        <item>다이아몬드 1</item>
        <item>루비 5</item>
        <item>루비 4</item>
        <item>루비 3</item>
        <item>루비 2</item>
        <item>루비 1</item>
    </string-array>
    <string name="title_activity_timer_fragment">TimerFragment</string>

</resources>