<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_level"
        android:checked="true"
        android:enabled="true"
        android:icon="@drawable/ic_bolt_24"
        android:title="@string/nav_level"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_tag"
        android:enabled="true"
        android:icon="@drawable/ic_tag_24"
        android:title="@string/nav_tag"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_source"
        android:enabled="true"
        android:icon="@drawable/ic_copyright_24"
        android:title="@string/nav_source"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/nav_setting"
        app:showAsAction="ifRoom" />

</menu>