<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_level_selection"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/view_divider"
        android:layout_width="58dp"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        app:dividerColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_divider">

        <TextView
            android:id="@+id/tv_bronze"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="@string/tv_bronze"
            app:drawableRightCompat="@drawable/ic_round_square_24"
            app:drawableTint="@color/bronze" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <TextView
            android:id="@+id/tv_silver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="@string/tv_silver"
            app:drawableRightCompat="@drawable/ic_round_square_24"
            app:drawableTint="@color/silver" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <TextView
            android:id="@+id/tv_gold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="@string/tv_gold"
            app:drawableRightCompat="@drawable/ic_round_square_24"
            app:drawableTint="@color/gold" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <TextView
            android:id="@+id/tv_platinum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="@string/tv_platinum"
            app:drawableRightCompat="@drawable/ic_round_square_24"
            app:drawableTint="@color/platinum" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <TextView
            android:id="@+id/tv_diamond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="@string/tv_diamond"
            app:drawableRightCompat="@drawable/ic_round_square_24"
            app:drawableTint="@color/diamond" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <TextView
            android:id="@+id/tv_ruby"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:text="@string/tv_ruby"
            app:drawableRightCompat="@drawable/ic_round_square_24"
            app:drawableTint="@color/ruby" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>